# openverse

./: .babelrc  .cc-metadata.yml  .cc_metadata.yml  .codespellrc  .dockerignore  .editorconfig  .eslintcache  .eslintignore  .eslintrc.custom.js  .eslintrc.js  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .hadolint.yaml  .isort.cfg  .lintstagedrc  .pnpm-version  .pnpmfile.cjs  .postcssrc.js  .pre-commit-config.frontend.yaml.jinja  .pre-commit-config.local.yaml.jinja  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierignore  .prettierrc.js  .ruff.toml  .travis.yml  .vale.ini  404.html  410_IMPLEMENTATION_SUMMARY.md  CNAME  CODEBASE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONSENT_DECISION_MAKING.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  DAGs.md  (+72 more)
.vale/: .gitignore  .vale.ini  Dockerfile  README.md  download.sh  justfile  pyproject.toml
.vale/styles/Openverse/: README.md  TermCasing.yml
api/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  compose.yml  env.docker  env.template  gunicorn.conf.py  index.html  justfile  manage.py  nginx.conf.template  pyproject.toml  pytest.ini  run.py  run.sh  test.pickle  worker.py
api/api/: apps.py  urls.py
api/api/admin/: __init__.py  forms.py  media_report.py  oauth.py  site.py  user.py
api/api/constants/: licenses.py  media_types.py  moderation.py  parameters.py  privilege.py  restricted_features.py  search.py  sensitivity.py  sorting.py
api/api/controllers/: search_controller.py
api/api/docs/: audio_docs.py  base_docs.py  image_docs.py  oauth2_docs.py
api/api/examples/: __init__.py  audio_requests.py  audio_responses.py  environment.py  image_requests.py  image_responses.py  oauth2_requests.py  oauth2_responses.py
api/api/middleware/: client_application_middleware.py  response_headers_middleware.py  strict_auth_middleware.py
api/api/migrations/: 0001_initial.py  0003_image_view_count.py  0007_auto_20180803_1909.py  0008_imagelist_slug.py  0012_auto_20190102_2012.py  0015_contentprovider_notes.py  0019_auto_20190307_1830.py  0020_auto_20190918_1954.py  0021_deletedimages.py  0026_imagereport_date.py  0028_sourcelogo.py  0031_auto_20210604_1825.py  0032_audio_models.py  0036_foreign_id_uniq.py  0037_media_thumbnails.py  0040_nullable_urls.py  0042_audio_audioset_relation.py  0045_audioaddon.py  0046_alter_throttledapplication_user.py  0048_alter_throttledapplication_client_secret.py  0048_alter_throttledapplication_rate_limit_model.py  0052_relational_fields.py  0054_throttledapplication_post_logout_redirect_uris.py  (+24 more)
api/api_docs/: index.html
api/catalog/: custom_auto_schema.py  example_responses.py  logger.py  settings.py  wsgi.py
api/conf/: asgi.py  asgi_handler.py  context_processors.py  lifecycle_handler.py  oauth2_extensions.py  wsgi.py  wsgi_handler.py
api/docs/: conf.py  index.md  terms_of_service.md
api/guides/: debugging.html  deploy.html  documentation.html  https.html  index.html  logging.html  quickstart.html  test.html
api/latest_migrations/: README  api  django.contrib.admin  django.contrib.auth  django.contrib.contenttypes  django.contrib.sessions  django_structlog  oauth2_provider
api/meta_docs/: CONTRIBUTING.md  README.md
api/nginx/: nginx.conf.template
api/open_api/: apps.py  urls.py  views.py
api/reference/: authentication_and_throttling.html  healthcheck.html  index.html  made_with_ov.html  search_algorithm.html
api/test/: api_live_integration.py  api_live_search_qa.py  audio_integration_test.py  auth_test.py  backwards_compat_test.py  conftest.py  dead_link_filter_test.py  examples_test.py  image_integration_test.py  media_integration.py  run_test.sh  search_qa.py  test_audio_integration.py  test_auth.py  test_backwards_compat.py  test_dead_link_filter.py  test_examples.py  test_image_integration.py  test_schema.py  test_v1_integration.py  utils.py  v1_integration_test.py
automations/python/: Pipfile  README.md  generate_report.py  issues_with_prs.py  justfile  label_pr.py  print_labels.py  pyproject.toml  set_matrix_images.py  set_slack_user.py  sync_labels.py
documentation/: .gitignore  Pipfile  README.md  conf.py  index.md  justfile  pyproject.toml
documentation/_ext/: link_issues.py  link_usernames.py  quick_toctree.py
documentation/_toc_templates/: flat.md
documentation/api/: index.md
documentation/automations/: index.md
documentation/catalog/: index.md
documentation/changelogs/: index.md
documentation/frontend/: index.md
documentation/general/: CONTRIBUTING.md  contributing.md  deployment.md  general_setup.md  https.md  index.md  logging.md  quickstart.md  retired.md  run.md  stack.md  test.md  workspace.md  zero_downtime_database_management.md
documentation/guides/: deployment.md  general_setup.md  index.md  quickstart.md  test.md  zero-downtime-database-management.md
documentation/ingestion_server/: index.md
documentation/meta/: examplefile.md  index.md  maintainer_tasks.md  media_properties.md
documentation/projects/: index.md  planning.md
documentation/reference/: ci_cd.md  consent_decision_making.md  dev_flow.md  github_contribution_practices.md  index.md
indexer_worker/: .dockerignore  Dockerfile  README.md  compose.yml  env.docker  env.template  gunicorn.conf.py  justfile  pyproject.toml
indexer_worker/indexer_worker/: api.py  authority.py  db_helpers.py  elasticsearch_models.py  es_helpers.py  es_mapping.py  indexer.py  queries.py  tasks.py
indexer_worker/tests/: constants.py  gen_integration_compose.py  integration_test.py  test_constants.py  test_es_audio_model.py  test_es_image_model.py  test_integration.py  test_queries.py  utils.py
utilities/dead_links/: dead_link_tally.py  pyproject.toml
utilities/generate_test_locales/: Pipfile  __main__.py  justfile  pyproject.toml
utilities/project_planning/: .gitignore  Pipfile  README.md  calculate_available_weeks.py  calculate_average_weeks_of_work.py  graph_project_voting.py  process_selection_votes.py  pyproject.toml  sheet_utils.py
utilities/provider_tallies/: .gitignore  Pipfile  README.md  provider_tally_stats.py  pyproject.toml
(+40773 files in other folders)
