[project]
name = "openverse-vale"
version = "0.0.0"
description = "Openverse Vale configuration"
authors = [
    {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]
dependencies = [
    "vale>=3.7.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
