[project]
name = "openverse-documentation"
version = "0.0.0" # redundant for application
description = "Documentation for the Openverse project"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]

requires-python = "==3.11.*"
dependencies = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "furo >=2024.4.27, <2025",
  "myst-parser[linkify] >=3.0.1, <4",
  "sphinx >=7.3.7, <8",
  "sphinxcontrib-mermaid >=0.9.2, <0.10",
  "sphinx-autobuild >=2024.4.16, <2025",
  "sphinx-copybutton >=0.5.2, <0.6",
  "sphinx-notfound-page >=1.0.0, <2",
  "sphinx-reredirects >=0.1.3, <0.2",
]
