[project]
name = "openverse-documentation"
version = "0.0.0" # redundant for application
description = "Documentation for the Openverse project"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]

requires-python = "==3.12.*"
dependencies = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
  "furo >=2024.4.27, <2025",
  "myst-parser[linkify] >=4, <5",
  "sphinx >=8.1.3, <9",
  "sphinxcontrib-mermaid >=1, <1.1",
  "sphinx-autobuild >=2024.4.16, <2025",
  "sphinx-copybutton >=0.5.2, <0.6",
  "sphinx-notfound-page >=1.0.0, <2",
  "sphinx-reredirects >=0.1.3, <0.2",
]
