[project]
name = "openverse-automations"
version = "0.0.0"# redundant for application
description = "Automations for the Openverse project"
readme = "README.md"
authors = [
    {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]

requires-python = "==3.12.*"
dependencies = [
    "pygithub >= 2.3",
    "pyyaml >= 6.0",
    "beautifulsoup4 >= 4.12",
    "requests >= 2.32",
    "mechanize >= 0.4",
    "pyotp >= 2.9",
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipython",
]
