[project]
name = "dead_links"
version = "0.0.0"
description = "Retrieves dead link tallies from Openverse API Redis"
authors = [
  {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]
dependencies = [
    "redis >= 5.0.7, <6",
    "tqdm >= 4.66.4, <5",
    "click >=8.1.7, <9",
]
requires-python = "==3.12.*"

[tool.pdm]
distribution = false
