[project]
name = "generate_test_locales"
version = "0.0.0"
description = "Generate test locales for Openverse"
authors = [
  {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]
dependencies = [
    "argostranslate >= 1.9.6, <2",
]
requires-python = "==3.12.*"

[tool.pdm]
distribution = false
