[project]
name = "project_planning"
version = "0.0.0"
description = "Project planning utilities"
readme = "README.md"
authors = [
    {name = "Openverse Contributors", email = "openverse@wordpress.org"},
]
dependencies = [
    "pandas >= 2.2.2, <3",
    "click >= 8.1.7, <9",
    "matplotlib >= 3.9.1, <4",
    "jupyter >= 1.0.0, <2",
    "openpyxl >= 3.1.5, <4",
]
requires-python = "==3.12.*"

[tool.pdm]
distribution = false
